# keyboard-firmware

./: .gitignore  .travis.yml  4key.h  Descriptors.c  Descriptors.h  Keyboard.c  Keyboard.h  Makefile  Makefile.lufa  Makefile.vusb  README.md  README.txt  buzzer.c  buzzer.h  config.c  config.h  extrareport.c  extrareport.h  hardware.c  hardware.h  interpreter.c  interpreter.h  interpreter_harness.c  keystate.c  keystate.h  kinesis.c  kinesis.h  kinesis110.c  kinesis110.h  leds.c  leds.h  macro.c  macro.h  macro_index.c  macro_index.h  makefile  printing.c  printing.h  release.nix  serial_eeprom.c  (+10 more)
Board/: Buttons.h  LEDs-backwards.h  LEDs.h
client/: KeyboardClient.rb  gui.xml  hidcodes.rb  keyboardcomm.rb  keyboardmodel.rb  keyboardpresenter.rb  keyboardview.rb
compiler/: BlockIR.hs  ErrorState.hs  Errors.hs  Indexes.hs  LibKeyc.hs  Main.hs  Makefile  Output.hs  Parser.hs  basictypes.hs  blockir.hs  compiler.cabal  errors.hs  errorstate.hs  example.kc  main.hs  output.hs  parser.hs  typedast.hs
compiler/examples/: alphabet.kc  error-syntax.kc  hyper.kc  mouse.kc  tetris.kc
compiler/tests/: BlockIRSpec.hs  OutputSpec.hs
hardware/: 4x4.c  4x4.h  ergodox.c  ergodox.h  keypad.c  keypad.h  kinesis.c  kinesis.h  kinesis110.c  kinesis110.h  splitboard.c  splitboard.h
lufa/: eeext_endpoint_stream.c  eeext_endpoint_stream.h  lufa_main.c  storage_stream.h
nix/: compiler.nix  firmware.nix  qtclient.nix
qtclient/: .dir-locals.el  .gitignore  KeyboardClient.desktop  LICENSE  compiler-integration.md  compiler.pri  device.cc  device.h  devicemock.cc  devicemock.h  (+66 more)
(+62 files in other folders)
