name:          Compiler
version:       0.0
cabal-version: >= 1.2
build-type:    Simple

executable keyc
  main-is: Main.hs
  build-depends: base, containers, bytestring,
                 mtl, fgl, parsec

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: . tests
  main-is: Spec.hs
  build-depends: base, containers, bytestring, mtl, fgl, parsec, hspec

library
  exposed-modules: LibKeyc, Parser, TypedAST, BlockIR, Indexes, Output, Errors, BasicTypes, ErrorState

  build-depends: base, containers, bytestring,
                 mtl, fgl, parsec
